dev1分支天下无敌

--- a/test/helloGit.html
+++ b/test/helloGit.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <script>
-    let str = 'shili niubi 666'
+    // dev 1 添加注释
+    let str = 'shili 的dev分支 niubi 666'
     console.log('str --- ', str)
 </script>
 </body>
