你牛逼什么啊

--- a/test/helloGit.html
+++ b/test/helloGit.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     // dev 1 添加注释
-    let str = 'shili 的dev分支 niubi 666'
+    let str = 'shili dev分支才是最 niubi 666'
     console.log('str --- ', str)
 </script>
 </body>
